--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,6 @@
 url = https://practis.co.il/automation/
+products-uri = https://safe-beyond-55898.herokuapp.com/
+products-basepath = api/v1/products
 
 webdriver-att-val = WebDriver
 start-max = --start-maximized
@@ -13,7 +15,6 @@ ignore-certificate-errors = --ignore-certificate-errors
 
 no-sandbox = --no-sandbox
 disable-dev-shm-usage = --disable-dev-shm-usage
-
 
 user = admin
 pass = admin
