Methods to support test cases constants needed to assert in test cases test cases created 1,2,3,4,5

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -19,4 +19,8 @@ name-reg = name surname
 mail-reg = mail@reganmail.com
 pwd-reg = regpassword
 
+mail-success = henryjonesjr@indianajones.com
+pwd-success = indythebestmovieever
+name-success = Indiana Jones
+
 existent-mail = mail@mail.com
